FIx contrast error

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1 {
 
 .about a {
   text-decoration: none;
-  color: #7f8cff;
+  color: #172b4d;
   font-size: 18px;
   font-weight: 600;
 }
@@ -94,7 +94,7 @@ h1 {
   list-style: none;
   font-size: 12px;
   font-weight: bolder;
-  color: #6070ff;
+  color: #172b4d;
 }
 
 .list3 li {
@@ -106,12 +106,12 @@ h1 {
   list-style: none;
   font-size: 12px;
   font-weight: bolder;
-  color: #6070ff;
+  color: #172b4d;
 }
 
 .let-connect a {
   text-decoration: none;
-  color: #7f8cff;
+  color: #172b4d;
   font-size: 18px;
   font-weight: 600;
 }
@@ -129,11 +129,11 @@ h1 {
 .image ul li {
   margin-right: 2rem;
   font-size: 2rem;
-  color: #505f79;
+  color: #01050a;
 }
 
 .image ul li a {
-  color: #505f79;
+  color: #000203;
 }
 
 .sectiontemplate {
@@ -196,7 +196,7 @@ h1 {
 }
 
 .special {
-  color: #7a869a;
+  color: #0e0f0f;
 }
 
 .can {
@@ -204,7 +204,7 @@ h1 {
 }
 
 p {
-  color: #344563;
+  color: #0e0e0f;
   margin-top: 1rem;
   line-height: 2rem;
   font-size: 19px;
@@ -435,7 +435,7 @@ hr {
   font-style: normal;
   font-weight: 400;
   line-height: 28px;
-  color: #fff;
+  color: rgb(15, 14, 14);
   text-align: center;
   margin: 0 0 0 26px;
   margin-bottom: 14px;
